objects/PC_ReminderQueue__c.object
<CustomObject>
    <description>Reminder queue stores the details of the reminders for configured objects.</description>
    <fields>
        <fullName>PC_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If user wants to manually activate or deactivate reminder queue then this checkbox can be used.</description>
        <inlineHelpText>Reminder queue is not considered for sending reminders if it is false</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_AllRemindersSent__c</fullName>
        <formula>PC_RemindersSentSuccessfully__c ==  PC_RemindersToBeSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Reminders Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_AssignNotificationToUser__c</fullName>
        <description>Stores the information of user to whom the notification/task will be assigned.</description>
        <inlineHelpText>Stores the information of user to whom the notification/task will be assigned.</inlineHelpText>
        <label>Assign Notification to User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Comments__c</fullName>
        <description>Comments if any for the Reminder Queue</description>
        <inlineHelpText>Comments if any for the Reminder Queue</inlineHelpText>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_DueDate__c</fullName>
        <description>Appointment due date which will be taken as reference for reminder offset calculation.</description>
        <inlineHelpText>Appointment Date.</inlineHelpText>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_LastSuccessfulReminderSent__c</fullName>
        <description>Stores the date/time of Last Successful Reminder Sent as part of the Reminder Queue</description>
        <inlineHelpText>Stores the date/time of Last Successful Reminder Sent as part of the Reminder Queue</inlineHelpText>
        <label>Last Successful Reminder Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_ParentReferenceRecordID__c</fullName>
        <description>The Record ID on which the outcome task/event gets created.</description>
        <inlineHelpText>Specify Record ID on which the outcome task/event has to be created when a reminder is sent.</inlineHelpText>
        <label>Parent Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Recipient__c</fullName>
        <description>Recipient to whom the reminder will be sent.</description>
        <inlineHelpText>Recipient to whom the reminder will be sent.</inlineHelpText>
        <label>Recipient</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_RecordID__c</fullName>
        <description>Record ID that is referred for which queue record is created.</description>
        <externalId>true</externalId>
        <inlineHelpText>Record ID for which reminder is sent.</inlineHelpText>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ReminderChannel__c</fullName>
        <description>Stores the value of channel through which the reminder will be sent.</description>
        <inlineHelpText>Reminder service channel to send reminders.</inlineHelpText>
        <label>Reminder Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_ReminderSetting__c</fullName>
        <description>Custom metadata setting name that is used while sending reminders.</description>
        <inlineHelpText>Custom metadata setting name which has all properties defined.</inlineHelpText>
        <label>Reminder Setting Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_RemindersSentSuccessfully__c</fullName>
        <description>Number of reminders sent successfully and logs that got created with status success.</description>
        <inlineHelpText>Number of reminders sent successfully</inlineHelpText>
        <label>Number of Reminders Sent Successfully</label>
        <summaryFilterItems>
            <field>PC_ReminderLog__c.PC_Status__c</field>
            <operation>equals</operation>
            <value>SUCCESS</value>
        </summaryFilterItems>
        <summaryForeignKey>PC_ReminderLog__c.PC_ReminderQueue__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PC_RemindersToBeSent__c</fullName>
        <description>Number of reminders that are to be sent before the queue record is disabled.</description>
        <inlineHelpText>Number of reminders that are to be sent before the queue record is disabled.</inlineHelpText>
        <label>Number of Reminders to be Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_SupportPlanActivity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the Support plan activity Id to refer.</description>
        <inlineHelpText>Support Plan Activity Id</inlineHelpText>
        <label>Support Plan Activity</label>
        <referenceTo>PC_SupportPlanActivity__c</referenceTo>
        <relationshipLabel>Reminder Queues</relationshipLabel>
        <relationshipName>Reminder_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reminder Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_AllRemindersSent__c</columns>
        <columns>PC_Active__c</columns>
        <columns>PC_DueDate__c</columns>
        <columns>PC_ReminderSetting__c</columns>
        <columns>PC_RecordID__c</columns>
        <columns>PC_RemindersToBeSent__c</columns>
        <columns>PC_RemindersSentSuccessfully__c</columns>
        <columns>PC_Recipient__c</columns>
        <columns>PC_LastSuccessfulReminderSent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RQ-{0000}</displayFormat>
        <label>Reminder Queue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reminder Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>